Fix dark mode examples

--- a/packages/ag-charts-website/src/features/example-runner/components/ChartsExampleRunner.module.scss
+++ b/packages/ag-charts-website/src/features/example-runner/components/ChartsExampleRunner.module.scss
@@ -4,4 +4,5 @@
     border-radius: $size-1;
     // Border color taken from
     border: 1px solid var(--example-border-color);
+    overflow: hidden;
 }
